Correct text alignment in portrait media

--- a/global.css
+++ b/global.css
@@ -26,17 +26,18 @@ p {
 #banner {
 	flex-direction: row;
 }
+	#title {
+		margin: auto auto auto 0.5em;
+	}
 }
 @media all and (orientation: portrait) {
 #banner {
 	flex-direction: column;
 }
+	#title {
+		text-align: center;
+	}
 }
 	#logo {
 		height: 4em; width: 4em;
-	}
-	@media all and (orientation: landscape) {
-	#title {
-		margin: auto auto auto 0.5em;
-	}
 	}
